--- a/inpaint.yml
+++ b/inpaint.yml
@@ -9,10 +9,15 @@ gpu_type: 'nvidia-tesla-p100'
 # parameters
 name: places2_gated_conv_v100  # any name
 model_restore: ''  # logs/places2_gated_conv
-dataset: 'celebahq'  # 'tmnist', 'dtd', 'places2', 'celeba', 'imagenet', 'cityscapes'
-random_crop: False  # Set to false when dataset is 'celebahq', meaning only resize the images to img_shapes, instead of crop img_shapes from a larger raw image. This is useful when you train on images with different resolutions like places2. In these cases, please set random_crop to true.
+dataset: 'celeba'  # 'tmnist', 'dtd', 'places2', 'celeba', 'imagenet', 'cityscapes'
+
+random_crop: False  # Set to false when dataset is 'celebahq', meaning only resize the 
+# images to img_shapes, instead of crop img_shapes from a larger raw image. 
+# This is useful when you train on images with different resolutions like places2. 
+# In these cases, please set random_crop to true.
+
 val: False  # true if you want to view validation results in tensorboard
-log_dir: logs/full_model_celeba_hq_256
+log_dir: '/content/gdrive/My Drive/colab/logs/celeba'
 
 gan: 'sngan'
 gan_loss_alpha: 1
@@ -36,8 +41,8 @@ data_flist:
   ]
   # http://mmlab.ie.cuhk.edu.hk/projects/celeba.html, please to use random_crop: True
   celeba: [
-    'data/celeba/train_shuffled.flist',
-    'data/celeba/validation_static_view.flist'
+    'train_shuffled.flist',
+    'validation_static_view.flist'
   ]
   # http://places2.csail.mit.edu/, please download the high-resolution dataset and use random_crop: True
   places2: [
